<resources>
    <string name="app_name">GeekTask2</string>
    <string name="facebook_app_id">282559228774275</string>
    <string name="twitter_consumer_key">S4OXWTC3uYrKNrFl83mD41XRm</string>
    <string name="twitter_consumer_secret">tvIXx6J76DqarySSW9uxbpyFn5nJOC9xuann9yvyBJjFKoOyUl</string>

    <string name="hello_blank_fragment">fragment</string>
    <string name="recover_password">Please, enter your email to recover your password</string>
    <string name="registration_title">To book your course please fill in the registration form</string>
    <string name="registration_firstname">First Name</string>
    <string name="registration_lastname">Last Name</string>
    <string name="registration_email">Email</string>
    <string name="registration_phone">phone</string>
    <string name="registration_children">Children</string>
    <string name="registration_login">Login</string>
    <string name="registration_date">Date of Birthday</string>
    <string name="registration_password">Password</string>
    <string name="registration_add">More kids can be added</string>
    <string name="registration">Registration</string>
    <string name="calculator">Calculator</string>
    <string name="send">Send</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="err_msg_name">Enter your name</string>
    <string name="err_msg_password">Enter your password</string>
    <string name="hint_name">Enter your name</string>
    <string name="hint_password">Enter your password</string>
    <string name="hint_pairs">Enter The pairs (Example 13 14 34 56)</string>
    <string name="hint_tabs">Enter the number</string>
    <string name="error_large_number">too large number</string>
    <string name="error_pairs_number">Error! Enter only number pairs!</string>
    <string name="doubleClick_backBtn">Click one more time to exit</string>
    <string name="new_password">New password has been sent to your email</string>
    <string name="Incorrect_email">Incorrect Email</string>
    <string name="registration_complete">Registration complete</string>
    <string name="id">%1$d</string>


</resources>
