<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lego.geektask2.fragment.RegistrationFragment"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingLeft="35dp"
    android:paddingRight="35dp"
    android:paddingTop="20dp"
    android:id="@+id/RegistrationLayout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewRegistrationTitle"
        android:textSize="16sp"
        android:textColor="@color/background"
        android:text="@string/registration_title"
        android:gravity="center" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rv"
        android:layout_weight="7" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1">

        <android.support.design.widget.FloatingActionButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"

            android:id="@+id/floatingActionButtonAdd"
            app:srcCompat="@drawable/plus"
            app:fabSize="mini" />

        <TextView
            android:text="@string/registration_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewFloatingButton"
            android:layout_weight="1"
            android:textColor="@color/background"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <Button
        android:text="@string/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonRegistrationSend"
        android:background="@color/colorAccent"
        android:layout_weight="1"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:minHeight="69dp"
        android:textColor="@color/background" />

</LinearLayout>
