<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.lego.geektask2.fragment.RecoveryPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="@string/recover_password"
            android:textColor="@color/background"
            android:textSize="24sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_recover_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="344dp"
            tools:layout_editor_absoluteY="168dp"
            android:textColorHint="@color/background"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/editTextRecover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:paddingLeft="20dp"
                android:textColorHint="@color/background"
                android:hint="@string/registration_email"
                android:textColorHighlight="@color/background" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonRecover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="@color/colorAccent"
            android:text="@string/send"
            android:textColor="@color/background" />
    </LinearLayout>


</FrameLayout>
