<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lego.geektask2.activity.LoginActivity"
    android:background="@color/colorPrimary">


    <TextView
        android:text="@string/calculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textTitle"
        android:textColor="?attr/colorBackgroundFloating"
        android:textSize="24sp"
        android:gravity="center"
        tools:ignore="MissingConstraints"
        app:layout_constraintLeft_toLeftOf="@+id/activity_login"
        app:layout_constraintTop_toTopOf="@+id/activity_login"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="@+id/activity_login"
        app:layout_constraintBottom_toBottomOf="@+id/activity_login"
        android:layout_marginBottom="16dp"
        app:layout_constraintVertical_bias="0.100000024" />

    <LinearLayout
        android:layout_width="384dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="60dp"
        android:id="@+id/linearLayout"
        android:weightSum="1"
        android:gravity="right"
        app:layout_constraintLeft_toLeftOf="@+id/buttonRegistration"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@+id/activity_login"
        android:layout_marginTop="56dp"
        app:layout_constraintRight_toRightOf="@+id/buttonRegistration"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="344dp"
            tools:layout_editor_absoluteY="60dp"
            >

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="11dp"
                android:paddingLeft="15dp"
                android:theme="@style/TextLabel"
                android:maxLines="1"
                android:textColor="@android:color/white"
                tools:ignore="TextFields" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="344dp"
            tools:layout_editor_absoluteY="168dp">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:maxLines="1"
                android:theme="@style/TextLabel"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="11dp"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonForgotPass"
            android:textColor="@android:color/background_light"
            android:text="@string/forgotten_password"
            tools:ignore="MissingConstraints"
            app:layout_constraintLeft_toLeftOf="@+id/activity_login"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/activity_login"
            android:layout_marginTop="16dp"
            app:layout_constraintRight_toRightOf="@+id/activity_login"
            app:layout_constraintBottom_toBottomOf="@+id/activity_login"
            android:layout_marginBottom="16dp"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintVertical_bias="0.52"
            android:background="@android:color/transparent"
            style="@style/MyCustomButtonStyle" />

        <Button android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:background="@color/colorAccent"
            android:textColor="@android:color/background_light"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="270dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical|center_horizontal"
        app:layout_constraintLeft_toLeftOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:layout_marginTop="32dp"
        app:layout_constraintRight_toRightOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="1.0">



        <ImageButton
            android:layout_height="54dp"
            app:srcCompat="@drawable/facebook"
            android:id="@+id/buttonFacebook"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription,MissingConstraints,RtlHardcoded"
            android:layout_width="58dp"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="102dp"
            tools:layout_editor_absoluteY="0dp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/background"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp" />

        <ImageButton
            android:layout_width="58dp"
            android:layout_height="54dp"
            app:srcCompat="@drawable/google"
            android:id="@+id/buttonGoogle"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="160dp"
            tools:layout_editor_absoluteY="0dp"
            android:contentDescription=""
            tools:ignore="ContentDescription" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/background"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp" />

        <ImageButton
            android:layout_width="58dp"
            android:layout_height="54dp"
            app:srcCompat="@drawable/twiter"
            android:id="@+id/buttonTwitter"
            android:background="@android:color/transparent"
            tools:ignore="ContentDescription,RtlHardcoded"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="218dp"
            tools:layout_editor_absoluteY="0dp"
            android:scaleType="centerCrop" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:id="@+id/buttonRegistration"
        tools:ignore="MissingConstraints,NotSibling"
        app:layout_constraintLeft_toLeftOf="@+id/activity_login"
        app:layout_constraintTop_toBottomOf="@+id/buttonGoogle"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="@+id/activity_login"
        app:layout_constraintBottom_toBottomOf="@+id/activity_login"
        android:layout_marginBottom="32dp"
        android:background="@android:color/transparent"
        android:textAppearance="@style/MyCustomTabTextAppearance"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        style="@style/MyCustomButtonStyle" />

</android.support.constraint.ConstraintLayout>
